--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 VITE_NODE_ENV=development
 VITE_BACKEND_URL=http://localhost:4000
+VITE_GRAPHQL_URL=http://localhost:4000
 # SENTRY_AUTH_TOKEN=
