--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
