--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "start": "ts-node src/app.ts",
+    "start:dist": "node dist/app.js",
     "start:dev": "nodemon --watch src --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
