--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,19 @@
-FROM node:20-alpine as builder
+FROM node:20-alpine
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY package.json ./
+COPY package*.json ./
+
 COPY yarn.lock ./
-
-COPY . ./
-
-RUN rm ./.env.production
-RUN mv ./.env ./.env.production
 
 RUN yarn install
 
+COPY . .
+
 RUN yarn run build
 
-FROM nginx:alpine
+RUN yarn add -g serve
 
-WORKDIR /etc/nginx/html/
+EXPOSE 5000
 
-RUN rm -rf *
-
-COPY --from=builder /app/dist/ ./
-
-RUN rm /etc/nginx/conf.d/default.conf
-COPY _nginx/frontend.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD ["serve", "-s", "dist"]
