--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-alpine
+FROM node:alpine
 
 WORKDIR /usr/src/app
 
@@ -6,13 +6,15 @@ COPY package*.json ./
 
 COPY yarn.lock ./
 
-RUN yarn install
+RUN ls -la
+
+RUN npm install
 
 COPY . .
 
-RUN yarn run build
+RUN npm run build
 
-RUN yarn add -g serve
+RUN npm install -g serve
 
 EXPOSE 5000
 
